<resources>
    <string name="app_name">Chicken Masala</string>
    <string name="logo_name">Masalaty</string>
    <string name="Cuisines_title">Cuisines</string>
    <string name="ForYou_title">For You</string>
    <string name="Under20MinTitle">Under 20 min meal</string>
    <string name="Recipe_Name">Recipe Name</string>
    <string name="Cuisine">Cuisine</string>
    <string name="cooking_time">%1$d min</string>
    <string name="View_All_title">View All</string>
    <string name="about_text">About Indian Food</string>
    <string name="history_text">History</string>
    <string name="history_text1">Indian cuisine has a long and diverse history that spans thousands of years. Its roots can be traced back to the ancient civilization of the Indus Valley, which existed over 5,000 years ago.</string>
    <string name="history_text2">The food of this era consisted mainly of grains, lentils, and vegetables, and was flavored with a variety of herbs and spices.
     Over time, Indian cuisine evolved and was influenced by a variety of cultures and traditions, including Persian, Mongolian, Turkish, and British. These influences can be seen in the use of ingredients like tomatoes, potatoes, and chili peppers, which were introduced to India by the Portuguese in the 16th century.</string>
    <string name="history_text3">During the Mughal period (16th-19th century), Indian cuisine became more refined and elaborate, with the introduction of rich curries, biryanis, and kebabs. The Mughals were known for their love of food and lavish feasts, and their culinary influence is still felt in many parts of India today.</string>
    <string name="history_text4">In the modern era, Indian cuisine has continued to evolve and adapt to changing tastes and trends. Today, it is known for its bold flavors, intricate spice blends, and wide variety of vegetarian and non-vegetarian dishes.</string>
    <string name="history_text5">Indian cuisine has also gained popularity around the world, with Indian restaurants and food trucks popping up in cities across the globe. It is widely regarded as one of the most diverse and flavorful cuisines in the world, and continues to be celebrated for its rich history and cultural significance.</string>
    <string name="madhur">Madhur</string>
    <string name="saransh">Saransh</string>
    <string name="ranveer">Ranveer</string>
    <string name="vikas">Vikas</string>
    <string name="sanjeev">Sanjeev</string>
    <string name="chefs">chefs</string>
    <string name="search">Search</string>
    <string name="tea">Tea</string>
    <string name="kofta">kofta</string>
    <string name="_2_00">15 min</string>
    <string name="burger">Burger</string>
    <string name="basboosa">Basboosa</string>
    <string name="maftool">Maftool</string>
    <string name="description">Explore food dishes and add them \n to Search to show them here.</string>
    <string name="empty_list">Your Search List is Empty</string>
    <string name="search_hint">Search</string>
    <string name="empty_favourite_description">Explore food dishes and add them \n to favorite to show them here.</string>
    <string name="empty_favourite_list">Your Favourites List is Empty</string>
    <string name="category_image">Category Image</string>
    <string name="min">min</string>
    <string name="favourite">Favourite</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="selected_chip_sample">indian</string>
    <string name="unSelected_chip_sample">South Indian Recipes</string>
    <string name="all">All</string>
    <string name="recipe_image">recipe_image</string>
    <string name="pepper">Pepper</string>
    <string name="back_icon">back icon</string>
    <string name="history">History</string>
    <string name="back_arrow">back arrow</string>
    <string name="details">Details</string>
    <string name="heart">Heart</string>
    <string name="meal_time">Meal Time</string>
    <string name="meal_ingredients">Meal Ingredients</string>
    <string name="website">Website</string>
    <string name="more_info">More Info</string>
    <string name="tabs">Tabs</string>
    <string name="favourites">Favourites</string>
    <string name="theme">Theme</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="language">Language</string>
    <string name="english">English</string>
    <string name="notify">Notify</string>
    <string name="what_s_new">What’s new?</string>
    <string name="faq">FAQ</string>
    <string name="terms_of_service">Terms of Service</string>
    <string name="history_of_indian_food">History of indian food</string>
    <string name="restaurant_menu">Restaurant Menu</string>
    <string name="minutes">min</string>
    <string name="meal">Meal</string>
    <string name="under_5_ingredients_meal">Under 5 ingredient meal</string>
    <string name="add_to_favorites">add to favorites</string>
    <string name="language_select">English</string>
    <string name="view_all">view all</string>
    <string name="filter">Filter</string>
    <string name="search_filter">Search Filter</string>
    <string name="ingredient_count">Ingredient Count</string>
</resources>