<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragments.SettingFragment">
    <!-- Favourites section -->

    <TextView
        android:id="@+id/text_favourites"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:text="@string/favourites"
        android:textSize="16sp"
        android:textColor="@color/text_color"
        android:fontFamily="@font/poppins_medium"
        app:layout_constraintBottom_toBottomOf="@+id/icon_favourites"
        app:layout_constraintStart_toEndOf="@+id/icon_favourites"
        app:layout_constraintTop_toTopOf="@+id/icon_favourites" />

    <ImageView
        android:id="@+id/icon_favourites"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginStart="16dp"
        android:src="@drawable/favorite_border"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/heart" />

    <ImageView
        android:id="@+id/icon_theme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/brightness_4"
        android:layout_marginTop="36dp"
        app:layout_constraintStart_toStartOf="@+id/icon_favourites"
        app:layout_constraintTop_toBottomOf="@+id/icon_favourites"
        android:contentDescription="@string/theme" />

    <TextView
        android:id="@+id/text_theme"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/dark_mode"
        android:textColor="@color/text_color"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/icon_theme"
        app:layout_constraintStart_toEndOf="@+id/icon_theme"
        app:layout_constraintTop_toTopOf="@+id/icon_theme"/>


    <com.google.android.material.switchmaterial.SwitchMaterial
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:layout_constraintHorizontal_bias="1"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/text_theme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/text_theme"
        app:layout_constraintTop_toTopOf="@+id/text_theme"
        />

    <ImageView
        android:id="@+id/icon_language"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:src="@drawable/language"
        app:layout_constraintStart_toStartOf="@+id/icon_theme"
        app:layout_constraintTop_toBottomOf="@+id/icon_theme"
        android:contentDescription="@string/language" />

    <TextView
        android:id="@+id/text_language"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/language"
        android:textColor="@color/text_color"
        android:textSize="16sp"
        android:layout_marginStart="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/icon_language"
        app:layout_constraintStart_toEndOf="@+id/icon_language"
        app:layout_constraintTop_toTopOf="@+id/icon_language" />

    <TextView
        android:id="@+id/select_language"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/english"
        android:textColor="@color/text_color"
        android:textSize="16sp"
        app:layout_constraintHorizontal_bias="1"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/text_language"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/text_language"
        app:layout_constraintTop_toTopOf="@+id/text_language" />

    <ImageView
        android:id="@+id/icon_whats_new"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:src="@drawable/add_alert"
        app:layout_constraintStart_toStartOf="@+id/icon_language"
        app:layout_constraintTop_toBottomOf="@+id/icon_language"
        android:contentDescription="@string/notify" />

    <TextView
        android:id="@+id/new_label"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:text="@string/what_s_new"
        android:textColor="@color/text_color"
        android:fontFamily="@font/poppins_medium"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/icon_whats_new"
        app:layout_constraintStart_toEndOf="@+id/icon_whats_new"
        app:layout_constraintTop_toTopOf="@+id/icon_whats_new"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/icon_faq"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:src="@drawable/help_outline"
        app:layout_constraintStart_toStartOf="@+id/icon_whats_new"
        app:layout_constraintTop_toBottomOf="@+id/icon_whats_new"
        android:contentDescription="@string/faq" />

    <TextView
        android:id="@+id/faq_label"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:text="@string/faq"
        android:textColor="@color/text_color"
        android:fontFamily="@font/poppins_medium"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/icon_faq"
        app:layout_constraintStart_toEndOf="@+id/icon_faq"
        app:layout_constraintTop_toTopOf="@+id/icon_faq" />

    <ImageView
        android:id="@+id/icon_terms_of_service"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:src="@drawable/checklist"
        app:layout_constraintStart_toStartOf="@+id/icon_faq"
        app:layout_constraintTop_toBottomOf="@+id/icon_faq"
        android:contentDescription="@string/terms_of_service" />

    <TextView
        android:id="@+id/text_terms_of_service"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:textColor="@color/text_color"
        android:textSize="16sp"
        android:text="@string/terms_of_service"
        android:fontFamily="@font/poppins_medium"
        app:layout_constraintBottom_toBottomOf="@+id/icon_terms_of_service"
        app:layout_constraintStart_toEndOf="@+id/icon_terms_of_service"
        app:layout_constraintTop_toTopOf="@+id/icon_terms_of_service" />

    <ImageView
        android:id="@+id/icon_history"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:src="@drawable/history"
        app:layout_constraintStart_toStartOf="@+id/icon_terms_of_service"
        app:layout_constraintTop_toBottomOf="@+id/icon_terms_of_service"
        android:contentDescription="@string/history" />

    <TextView
        android:id="@+id/text_history"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:text="@string/history_of_indian_food"
        android:textColor="@color/text_color"
        android:textSize="16sp"
        android:fontFamily="@font/poppins_medium"
        app:layout_constraintBottom_toBottomOf="@+id/icon_history"
        app:layout_constraintStart_toEndOf="@+id/icon_history"
        app:layout_constraintTop_toTopOf="@+id/icon_history" />


</androidx.constraintlayout.widget.ConstraintLayout>