<?xml version="1.0" encoding="UTF-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/specificRecipeCard"
    android:layout_width="150dp"
    android:layout_height="200dp"
    android:layout_marginEnd="8dp"
    app:cardCornerRadius="12dp"
    app:cardElevation="0dp">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/image_recipe"
        android:layout_width="match_parent"
        android:layout_height="124dp"
        android:contentDescription="@string/recipe_image"
        android:scaleType="centerCrop"
        android:src="@drawable/burgur"
        app:shapeAppearanceOverlay="@style/RoundedImageView" />


    <LinearLayout
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_gravity="end|top"
        android:layout_margin="@dimen/small_Size"
        android:background="@drawable/circle"
        android:gravity="center"
        android:paddingTop="3dp">

        <ImageView
            android:id="@+id/favIcon"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:contentDescription="@string/category_image"
            android:foreground="@drawable/fav"
            android:gravity="center" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_margin="@dimen/small_Size"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text_recipe_name"
            style="@style/TextStyle.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/lower_medium_Size"
            android:text="@string/Recipe_Name" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/home_under20min_recipe_card_background"
            android:orientation="horizontal"
            android:paddingHorizontal="@dimen/small_Size">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/small_Size"
                android:contentDescription="@drawable/cuisine_icon"
                android:src="@drawable/cooking_time" />

            <TextView
                android:id="@+id/text_cook_time"
                style="@style/RegularTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cooking_time" />
        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>


