<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ForYouCard"
    android:layout_width="257dp"
    android:layout_height="225dp"
    android:layout_marginHorizontal="8dp"
    android:background="@drawable/home_recipe_card_background"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/recipeImage"
        android:layout_width="match_parent"
        android:layout_height="145dp"
        android:contentDescription="@string/recipe_image"
        android:scaleType="centerCrop"
        android:src="@drawable/burgur" />


    <LinearLayout
        android:id="@+id/card"
        android:layout_width="257dp"
        android:layout_height="80dp"
        android:background="@drawable/home_recipe_card_background"
        android:orientation="vertical"
        android:padding="@dimen/small_Size">

        <TextView
            android:id="@+id/RecipeNameTitle"
            style="@style/TextStyle.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Recipe_Name" />

        <View
            android:id="@+id/space_8_1"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/small_Size" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@drawable/cuisine_icon"
                android:src="@drawable/cuisine_icon" />

            <View
                android:layout_width="@dimen/tiny_Size"
                android:layout_height="0dp" />

            <TextView
                android:id="@+id/single_cuisine"
                style="@style/RegularTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Cuisine" />


            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@drawable/cuisine_icon"
                android:src="@drawable/cooking_time" />

            <View
                android:layout_width="@dimen/tiny_Size"
                android:layout_height="0dp" />

            <TextView
                android:id="@+id/single_time"
                style="@style/RegularTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/cooking_time" />

        </LinearLayout>

        <View
            android:layout_width="wrap_content"
            android:layout_height="@dimen/small_Size" />

    </LinearLayout>


</LinearLayout>