<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">
    <!-- logo -->
    <TextView
        android:id="@+id/logo"
        style="@style/TextStyle.SpaceHorizontal.SpaceTop.LogoTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logo_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/space_16"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/medium_Size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo" />

    <!-- title -->
    <LinearLayout
        android:id="@+id/CuisinesLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingHorizontal="@dimen/medium_Size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/space_16">

        <TextView
            android:id="@+id/CuisinesTitle"
            style="@style/TextStyle.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Cuisines_title" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <!-- TODO: add the onclick action with the functionality-->
        <Button
            android:id="@+id/ViewAllSubtitle"
            style="@style/Widget.AppCompat.Button.Borderless.Subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="0dp"
            android:minHeight="0dp"
            android:paddingHorizontal="0dp"
            android:paddingVertical="0dp"
            android:text="@string/View_All_title"
            android:textAllCaps="false" />


    </LinearLayout>

    <!-- space_8
            <View
                android:id="@+id/space_8"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/small_Size"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/CuisinesLabel" />

    -->

    <!-- cuisines chips -->
    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none"
        
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CuisinesLabel"
        >
        <com.google.android.material.chip.ChipGroup
            android:id="@+id/cuisines_chip_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingStart="@dimen/medium_Size"
            android:paddingEnd="0dp"
            app:chipSpacingHorizontal="0dp"
            app:chipSpacingVertical="0dp"
            app:singleLine="true"
            app:singleSelection="true">

            <com.google.android.material.chip.Chip
                style="@style/SingleChip.SelectedChip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/selected_chip_sample" />

            <com.google.android.material.chip.Chip
                style="@style/SingleChip.UnSelectedChip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/unSelected_chip_sample" />

            <com.google.android.material.chip.Chip
                style="@style/SingleChip.UnSelectedChip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/unSelected_chip_sample" />

            <com.google.android.material.chip.Chip
                style="@style/SingleChip.UnSelectedChip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/unSelected_chip_sample" />


        </com.google.android.material.chip.ChipGroup>
    </HorizontalScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>